Try a fix based on https://stackoverflow.com/a/43574427/833771